Home page ready

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Rafagamedev
+title: Rafael Padilla Perez
 subtitle: Technical Artist
 email: rpadiper@gmail.com
 logo: /assets/images/rafa_pfp.jpeg
