--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ title: Rafael Padilla Perez
 subtitle: Technical Artist
 email: rpadiper@gmail.com
 logo: /assets/images/rafa_pfp.jpeg
+url: "https://www.rafagamedev.com"
+baseurl: "/Rafagamedev-2.0"
 description: >- # this means to ignore newlines until "baseurl:"
   I'm a Technical Artist who specializes in Rendering, Simulation, Tools
   and the Art Pipeline. I also make games! 
