Window open new

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-target-blank
 
 author:
   name   : "Rafael Padilla Perez"
