--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@ subtitle: Technical Artist
 email: rpadiper@gmail.com
 logo: /assets/images/rafa_pfp.jpeg
 description: >- # this means to ignore newlines until "baseurl:"
-  I'm a Technical Artist who specializes in Rendering, Simulation, Tools
-  and the Art Pipeline. I also make games! 
+  Disney College Program Intern. Technical Artist: Rendering, Simulation, Tools, Pipeline.
 twitter_username: rafagamedev
 github_username: rafapp
 # Mint: #7cffc5
@@ -47,7 +46,7 @@ plugins:
 author:
   name   : "Rafael Padilla Perez"
   avatar : "/assets/images/headshot.jpeg"
-  bio    : "Disney College Program Intern. Technical Artist: Rendering, Simulation, Tools and the Art Pipeline. I also make games!"
+  bio    : "Disney College Program Intern. Technical Artist: Rendering, Simulation, Tools, Pipeline."
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
