Change to TA/TD subtitle

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Rafael Padilla Perez
-subtitle: Technical Artist
+subtitle: TD/Technical Artist
 email: rpadiper@gmail.com
 logo: /assets/images/rafa_pfp.jpeg
 description: >- # this means to ignore newlines until "baseurl:"
