--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Rafael Padilla Perez
-subtitle: Software Engineer
+title: Rafael Padilla Perez 
+subtitle: Graphics & Software Engineer 
 email: rpadiper@gmail.com
 logo: /assets/images/rafa_pfp.jpeg
 description: >- # this means to ignore newlines until "baseurl:"
-  Software Engineer
+  Creative Technologist
 twitter_username: rafagamedev
 github_username: rafapp
 # Mint: #7cffc5
@@ -45,7 +45,7 @@ plugins:
 author:
   name   : "Rafael Padilla Perez"
   avatar : "/assets/images/headshot.jpeg"
-  bio    : "Software Engineer"
+  bio    : "Graphics & Software Engineer"
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
